--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,43 +1,31 @@
-# Couldn't automatically generate a config from your source code.
-# This is a generic template to serve as a base for your custom config
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
+
 jobs:
-  test:
+  build_and_push:
     docker:
-      - image: cimg/base:stable
+      - image: cimg/python:3.8
     steps:
       - checkout
-      # Replace this with a real test runner invocation
+      - setup_remote_docker:
+          version: 19.03.13
       - run:
-          name: Run tests
-          command: echo 'replace me with real tests!' && false
-  build:
-    docker:
-      - image: cimg/base:stable
-    steps:
-      - checkout
-      # Replace this with steps to build a package, or executable
+          name: Build Docker Image
+          command: |
+            docker build -t $DOCKERHUB_USERNAME/myapp:${IMAGE_1} .
       - run:
-          name: Build an artifact
-          command: touch example.txt
-      - store_artifacts:
-          path: example.txt
-  deploy:
-    docker:
-      - image: cimg/base:stable
-    steps:
-      # Replace this with steps to deploy to users
+          name: Authenticate with Docker Hub
+          command: |
+            echo "$DOCKERHUB_PASS" | docker login --username $DOCKERHUB_USERNAME --password-stdin
       - run:
-          name: deploy
-          command: '#e.g. ./deploy.sh'
+          name: Push Docker Image to Docker Hub
+          command: |
+            docker push $DOCKERHUB_USERNAME/myapp:${IMAGE_1}
+
 workflows:
-  example:
+  version: 2
+  build_and_deploy:
     jobs:
-      - test
-      - build:
-          requires:
-            - test
-      - deploy:
-          requires:
-            - test
+      - build_and_push:
+          filters:
+            branches:
+              only: main
