--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,4 +28,4 @@ workflows:
       - build_and_push:
           filters:
             branches:
-              only: main
+              only: circleci-project-setup
