--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,11 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker:
-          version: 19.03.13
+          version:latest
       - run:
           name: Build Docker Image
           command: |
-            docker build -t $DOCKERHUB_USERNAME/myapp:${CIRCLE_SHA1} .
+            docker build -t $DOCKERHUB_USERNAME/myapp:latest .
       - run:
           name: Authenticate with Docker Hub
           command: |
@@ -19,7 +19,7 @@ jobs:
       - run:
           name: Push Docker Image to Docker Hub
           command: |
-            docker push $DOCKERHUB_USERNAME/myapp:${CIRCLE_SHA1}
+            docker push $DOCKERHUB_USERNAME/myapp:latest
 
 workflows:
   version: 2
