--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,11 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker:
-          version:latest
+          version:20.10.7
       - run:
           name: Build Docker Image
           command: |
-            docker build -t $DOCKERHUB_USERNAME/myapp:latest .
+            docker build -t $DOCKERHUB_USERNAME/myapp:${CIRCLE_SHA1:0:7} .
       - run:
           name: Authenticate with Docker Hub
           command: |
@@ -19,7 +19,7 @@ jobs:
       - run:
           name: Push Docker Image to Docker Hub
           command: |
-            docker push $DOCKERHUB_USERNAME/myapp:latest
+            docker push $DOCKERHUB_USERNAME/myapp:${CIRCLE_SHA1:0:7}
 
 workflows:
   version: 2
